cmake_minimum_required(VERSION 3.22)
project(leetcode_mylocal)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_mylocal main.cpp)

add_executable(string_check string_check.cpp)

add_executable(lchot100 lchot100/lc27.cpp)

add_executable(lchot100_394 lchot100/lc394.cpp)
add_executable(lc8 lchot100/lc8.cpp)
add_executable(lc79 lchot100/lc79.cpp)
